# llmman

./: Cargo.toml  README.md  build.rs  shortnames.conf
.github/workflows/: ci.yml
go-shim/: backend_docker.go  backend_podman.go  go.mod  go.sum  hf.go  lock.go  lock_unix.go  lock_windows.go  shared_oci.go  shim.go  uri_sources.go
src/: ffi.rs  main.rs  shortnames.rs  webui.rs
src/cmd/: build.rs  inspect.rs  launch.rs  list.rs  login.rs  logout.rs  mod.rs  pull.rs  push.rs  rm.rs  run.rs  serve.rs  tag.rs
src/storage/: mod.rs  oci.rs
webui/: index.html
